# prcat

./: .gitignore  README.md  pyproject.toml
src/prcat/: __init__.py  cli.py  display.py  fetcher.py  reviewer.py
tests/: test_cli.py  test_fetcher.py  test_helpers.py  test_integration.py  test_reviewer.py
